[gd_scene load_steps=2 format=3 uid="uid://d4eg6griojvg0"]

[ext_resource type="Script" uid="uid://rxvwcn4asi3t" path="res://ui/hud.gd" id="1_rbyyf"]

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_rbyyf")

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 52.0
offset_top = 578.0
offset_right = 367.0
offset_bottom = 605.0

[node name="AmmoDisplay" type="Label" parent="."]
layout_mode = 0
offset_left = 962.0
offset_top = 585.0
offset_right = 1070.0
offset_bottom = 608.0
text = "AmmoDisplay"

[node name="WeaponName" type="Label" parent="."]
layout_mode = 0
offset_left = 891.0
offset_top = 537.0
offset_right = 1117.0
offset_bottom = 560.0
text = "WeaponName"

[node name="LocationNameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 849.0
offset_top = 33.0
offset_right = 1082.0
offset_bottom = 56.0
text = "LocationNameLabel"

[node name="InteractPrompt" type="Label" parent="."]
layout_mode = 0
offset_left = 513.0
offset_top = 447.0
offset_right = 553.0
offset_bottom = 470.0
text = "InteractPromt"

[node name="Crosshair" type="Label" parent="."]
layout_mode = 0
offset_left = -3.0
offset_top = 2.0
offset_right = 1157.0
offset_bottom = 650.0
text = "|---|
|    |
|---|"
horizontal_alignment = 1
vertical_alignment = 1
